examples/test/testpolicy12910.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12910
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key43: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value39
          key2: value23
      podSelector:
        matchLabels:
          key25: value32
          key13: value30
          key11: value45
